# ditto

./: .gitignore  Cargo.toml  Dockerfile  README.md  populate.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs  utils.rs  wasm.rs
src/chip8/: cpu.rs  display.rs  keypad.rs  memory.rs  mod.rs  timers.rs
tests/: display_tests.rs  integration_test.rs  keypad_tests.rs  memory_tests.rs  opcode_tests.rs  timers_tests.rs
web/: index.html  index.js
