[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "ditto"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.24"
rand = "0.8"
wasm-bindgen = "0.2"

[features]
default = []
console_error_panic_hook = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true